--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
         <header>
             <h1>Minha página pessoal</h1>
         </header>
+        <main>
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias aspernatur earum fugiat distinctio consequatur, laudantium voluptatum neque quidem corporis cum animi quibusdam, atque reiciendis magni temporibus adipisci vitae sunt. Cupiditate?</p>
+        </main>
     </body>
 </html>
